# ultimate-control

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  style.css
src/battery/: BatteryManager.cpp  BatteryManager.hpp  BatteryTab.cpp  BatteryTab.hpp
src/bluetooth/: BluetoothDeviceWidget.cpp  BluetoothDeviceWidget.hpp  BluetoothManager.cpp  BluetoothManager.hpp  BluetoothTab.cpp  BluetoothTab.hpp
src/core/: Settings.cpp  Settings.hpp  SettingsTab.cpp
src/css/: style.css
src/display/: DisplayManager.cpp  DisplayManager.hpp  DisplayTab.cpp  DisplayTab.hpp
src/power/: PowerManager.cpp  PowerManager.hpp  PowerSettings.cpp  PowerSettings.hpp  PowerSettingsDialog.cpp  PowerSettingsDialog.hpp  PowerTab.cpp  PowerTab.hpp
src/settings/: SettingsTab.cpp  SettingsTab.hpp  SettingsWindow.cpp  SettingsWindow.hpp  TabSettings.cpp  TabSettings.hpp
src/utils/: QRCode.cpp  QRCode.hpp
src/volume/: VolumeManager.cpp  VolumeManager.hpp  VolumeSettings.cpp  VolumeSettings.hpp  VolumeTab.cpp  VolumeTab.hpp  VolumeWidget.cpp  VolumeWidget.hpp
src/wifi/: WifiManager.cpp  WifiManager.hpp  WifiNetworkWidget.cpp  WifiNetworkWidget.hpp  WifiTab.cpp  WifiTab.hpp
